[gd_scene load_steps=5 format=2]

[ext_resource path="res://bots/chassis/basic_chassis/models/basic_chassis.scn" type="PackedScene" id=1]
[ext_resource path="res://bots/wheels/basic_wheel/basic_wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://bots/common/scripts/bot.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1.01029, -0.0103448, -1.51034, -1.01029, -0.0103448, 1.51034, -1.01029, 0.113793, -1.51034, -1.01029, 0.113793, 1.51034, 1.01724, -0.0103448, -1.51034, 1.01724, -0.0103448, 1.51034, 1.01724, 0.113793, -1.51034, 1.01724, 0.113793, 1.51034 )

[node name="HammerBot" type="VehicleBody"]
collision_layer = 2
collision_mask = 3
mass = 3.06122
script = ExtResource( 3 )

[node name="basic_chassis" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
shape = SubResource( 1 )

[node name="WheelFrontLeft" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, 1.2 )
use_as_traction = true
suspension_max_force = 120.0
damping_compression = 0.1
damping_relaxation = 0.2

[node name="WheelFrontRight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 1.2 )
use_as_traction = true
suspension_max_force = 120.0
damping_compression = 0.1
damping_relaxation = 0.2

[node name="WheelRearLeft" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, -1.2 )
use_as_traction = true
suspension_max_force = 120.0
damping_compression = 0.1
damping_relaxation = 0.2

[node name="WheelRearRight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -1, 0.5, -1.2 )
use_as_traction = true
suspension_max_force = 120.0
damping_compression = 0.1
damping_relaxation = 0.2
